# Sys-theme

./: .gitignore  README.md  trigger.py
hackdia26/: .gitignore  README.md  pyproject.toml
hackdia26/src/hackdia26/: crew.py  main.py
hackdia26/src/hackdia26/config/: agents.yaml  tasks.yaml
hackdia26/src/link/: scan_report_collector.py
hackdia26/trigger/: trigger.py
hackdia26_V2/: README.md  main.py
hackdia26_V2/agents/: email_scanner.py  link_analyzer.py  nlp_analyzer.py  report_generator.py
hackdia26_V2/graph/: flow.py
hackdia26_V2/tools/: pdf_checker.py
